# Operating-systems

./: README.md
Colloquium/: CMakeLists.txt  delete_duplicates.cpp  factorial.cpp  linked_list.cpp  main.cpp  Коллоквиум теория Тимошенко Никита 2 курс 5 группа.txt
Colloquium 1/: factorial.cpp  linked_list.cpp  main.cpp  Коллоквиум теория Тимошенко Никита 2 курс 5 группа.txt
Colloquium 1/include/: linked_list.h
Colloquium 2/: .gitignore  README.md  TaskSchemes.py  main.py  requirements.txt
Colloquium 2/app/: factory.py  schemas.py
Colloquium 2/app/core/: cache.py  config.py  db.py  errors.py  factory.py  logging_config.py  metrics.py  openapi.py  redisqueue.py
Colloquium 2/app/crud/: tasks.py
Colloquium 2/app/models/: task.py  user.py
Colloquium 2/app/routers/: auth.py  health.py  tasks.py
Colloquium 2/app/schemas/: auth.py  task.py
Colloquium 2/app/security/: auth.py  deps.py
Colloquium 2/app/storage/: db.py  memory.py  models.py
Colloquium 2/app/tasks/: jobs.py
Colloquium 2/deploy/: Dockerfile  docker-compose.yml  nginx.conf
Colloquium 2/front/: index.html  main.js  style.css
Colloquium 2/tests/: test_api.py  test_api_docker.py  test_main.http
Colloquium/include/: delete_duplicates.h  factorial.h  linked_list.h
Colloquium/tests/: test_delete_duplicates.cpp  test_factorial.cpp  test_linked_list.cpp
Lab 1/: CMakeLists.txt  Creator.cpp  Main.cpp  README.md  Reporter.cpp  employee.cpp  employee.h  test.cpp
Lab 2/: ArrayHandler.cpp  ArrayHandler.h  CMakeLists.txt  main.cpp  test.cpp
Lab 2 c++20/: ArrayHandler.cpp  ArrayHandler.h  CMakeLists.txt  Holder.cpp  Holder.h  README.md  ThreadHandler.cpp  ThreadHandler.h  main.cpp  test.cpp
Lab 2 c++98/: ArrayHandler.cpp  ArrayHandler.h  CMakeLists.txt  Holder.cpp  Holder.h  README.md  ThreadHandler.cpp  ThreadHandler.h  main.cpp  test.cpp
Lab 3/: Array.cpp  Array.h  ArrayHandler.cpp  ArrayHandler.h  CMakeLists.txt  Marker.cpp  Marker.h  README.md  ThreadHandler.cpp  ThreadHandler.h  main.cpp  solution_namespace.h
Lab 3/include/: Array.h  Marker.h  ThreadHandler.h
Lab 3/source/: Array.cpp  Marker.cpp  ThreadHandler.cpp
Lab 3/tests/: test_array.cpp  test_end-to-end.cpp  test_marker.cpp  test_threadhandler.cpp
Lab 4 c++98/: README.md
Lab 4 c++98/headers/: solution_namespace.h
Lab 4 c++98/src/: Receiver.cpp  Sender.cpp
Lab 4 c++98/tests/: test_shared_queue.cpp
Lab 5/: CMakeLists.txt  README.md
Lab 5/headers/: Employee.h  FileHandler.h  Request.h  solution_namespace.h
Lab 5/src/: Employee.cpp  FileHandler.cpp  Request.cpp  client.cpp  server.cpp
Lab 5/tests/: test_e2e.cpp  test_employee.cpp  test_file_operations.cpp
Lab_4/: CMakeLists.txt  Receiver.cpp  Receiver.h
Lab_4_C++98/: CMakeLists.txt
Lab_4_C++98/headers/: SharedQueue.h
Lab_4_C++98/include/: SharedQueue.h  solution_namespace.h
Lab_4_C++98/src/: Receiver.cpp  Sender.cpp  SharedQueue.cpp
Lab_4_C++98/tests/: test_reciever.cpp  test_sender.cpp
Коллоквиум/: Коллоквиум теория Тимошенко Никита 2 курс 5 группа.txt
Лабораторная работа 1/Creator/: Creator.cpp  Creator.vcxproj  Creator.vcxproj.filters
Лабораторная работа 1/Main/: Lab 1.sln  Main.cpp  Main.vcxproj  Main.vcxproj.filters  employee_io.cpp  employee_io.h
Лабораторная работа 1/Reporter/: Reporter.cpp  Reporter.vcxproj  Reporter.vcxproj.filters
Лабораторная работа 1/TEST_LAB_1/: TEST_LAB_1.vcxproj  test.cpp
